# posepro

./: .gitignore  LICENSE  README.md  package.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  brief.py  proposal.py  template.py  user.py
backend/app/routers/: __init__.py  auth.py  proposals.py
backend/app/schemas/: auth.py  proposals.py
backend/app/services/: __init__.py  auth.py  proposal_generation.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  main.tsx  styles.css
